# rocket-web

./: Cargo.toml
src/: main.rs
templates/: 404.html.tera  base.html.tera  index.html.tera
