cargo-features = ["strip"]

[package]
name = "rocket-web"
version = "0.1.0"
authors = ["Dalibor Karlović <dalibor.karlovic@flexolabs.io>"]
edition = "2018"

[profile.release]
strip = "symbols"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates"]

[dependencies.tera]
version = "1.5.0"
default-features = false
